Remove default left align for blocks, fix text align for centered blocks

--- a/src/styles.less
+++ b/src/styles.less
@@ -76,6 +76,10 @@
   }
 }
 
+.ui.container .block.align.center {
+  text-align: inherit;
+}
+
 .block.align {
   z-index: auto!important;
 }
